--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arjit - Developer Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="res-style.css">
+    <link rel="stylesheet" href="Portfolio 1/style.css">
+    <link rel="stylesheet" href="Portfolio 1/res-style.css">
     <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
@@ -139,7 +139,7 @@
           strings: ['Web Developer.', 'Software Developer.' , 'Web Desisgn'],typeSpeed: 50 });
     </script>
 
-    <script src="script.js"></script>
+    <script src="Portfolio 1/script.js"></script>
     
 </body>
 </html>
