--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="right">
                 <div class="image">
-                    <img src="development-4536630_1280.png" alt="">
+                    <img src="Portfolio 1/images/development-4536630_1280.png" alt="">
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <h1>Latest <span>Projects</span></h1>
         <div class="project">
             <div class="pr">
-                <img src="images/icons8-add-file-94.png" alt="" class="img1">
+                <img src="Portfolio 1/images/icons8-add-file-94.png" alt="" class="img1">
                 <div class="des">
                     <h1>File Management System</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolor similique sit blanditiis officiis sequi.</p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="pr">
-                <img src="images/icons8-food-delivery-64.png" alt="">
+                <img src="Portfolio 1/images/icons8-food-delivery-64.png" alt="">
                 <div class="des">
                     <h1>Food Dilivery Website</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolor similique sit blanditiis officiis sequi.</p>
@@ -103,7 +103,7 @@
                 
             </div>
             <div class="pr">
-                <img src="images/icons8-weather-app-64.png" alt="">
+                <img src="Portfolio 1/images/icons8-weather-app-64.png" alt="">
                 <div class="des">
                     <h1>Weather App</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolor similique sit blanditiis officiis sequi.</p>
